feat: スポット抽出機能を追加
